--- a/styles.css
+++ b/styles.css
@@ -14,74 +14,291 @@ a {
     color: black;
 }
 
+section {
+    margin-top: 48px;
+}
+
 header {
     display: flex;
-    justify-content: space-between;
     padding: 24px;
+    justify-content: space-between;
+    align-items: center;
 }
 
-header > h2 {
-    max-width: 50%;
-}
-
-nav {
-    flex-grow: 1;
+header > nav {
     display: flex;
     justify-content: center;
-    max-width: 50%;
 }
 
-nav > ul {
+.nav-list {
     display: flex;
-    justify-content: space-around;
-    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    gap: 48px;
 }
 
 #hamburger {
     display: none;
 }
 
-@media only screen and (max-width: 550px) { 
-    #hamburger {
-        display: block;
-    }
-
+@media screen and (max-width: 750px) {
     .nav-list {
         display: none;
+    }
+
+    #hamburger {
+        display: block;
     }
 }
 
 .hero {
+    min-height: 100svh;  
     display: flex;
-    padding: 48px;
-    height: 100svh;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .hero-info {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
+    width: 40%;
+    min-width: 300px;
 }
 
 .hero-info > h1 {
-    font-size: 4rem;
+    font-size: 3rem;
+    margin-bottom: 24px;
 }
 
 .hero-info > p {
-    max-width: 60%;
+    max-width: 70%;
+    margin-bottom: 48px;
 }
 
 .hero > img {
-    max-width: 50%;
+    width: 30%;
+    max-width: 500px;
+    min-width: 300px;
 }
 
 .btn-cta {
-    color: white;
-    margin-top: 24px;
-    max-width: 20%;
-    text-align: center;
+    width: 40%;
+    padding: 12px;
     border-radius: 8px;
+    background-color: rgba(0, 162, 255, 0.363);
+    color: white;
+}
+
+@media screen and (max-width: 750px) {
+    .hero-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .hero-info > h1 {
+        font-size: 1.5rem;
+        text-align: center;
+        margin-bottom: 12px;
+    }
+
+    .hero-info > p {
+        margin-bottom: 24px;
+    }
+}
+
+.partners {
+    display: flex;
+    justify-content: center;
+}
+
+.partners > ul {
+    height: 20vh;
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 80px;
+    background-color: rgba(128, 128, 128, 0.274);
+    border-radius: 16px;
+}
+
+.partners > ul > li {
+    background-color: rgba(128, 128, 128, 0);
+    display: flex;
+    gap: 12px;
+    font-size: 2rem;
+}
+
+.partners > ul > li > i {
+    background-color: rgba(128, 128, 128, 0);
+}
+
+@media screen and (max-width: 750px) {
+    .partners > ul {
+        height: 30vh;
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+    }
+
+    .partners > ul > li {
+        font-size: 1.5rem;
+    }
+}
+
+.info-right {
+    min-height: 80svh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.info-right > img {
+    width: 30%;
+    max-width: 500px;
+    min-width: 300px;
+}
+
+.info-right-desc {
+    width: 40%;
+    min-width: 300px;
+}
+
+.info-right-desc > h3 {
+    font-size: 2rem;
+    margin-bottom: 24px;
+}
+
+.info-right-desc > p {
+    max-width: 70%;
+    margin-bottom: 24px;
+}
+
+.info-right-desc > a {
+    font-size: 1rem;
+}
+
+@media screen and (max-width: 750px) {
+    .info-right-desc {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .info-right-desc > h3 {
+        font-size: 1.5rem;
+        text-align: center;
+        margin-bottom: 12px;
+    }
+
+    .info-right-desc > p {
+        margin-bottom: 24px;
+        text-align: center;
+    }
+}
+
+.info-left{
+    min-height: 80svh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.info-left > img {
+    width: 30%;
+    max-width: 500px;
+    min-width: 300px;
+}
+
+.info-left-desc {
+    width: 40%;
+    min-width: 300px;
+}
+
+.info-left-desc > h3 {
+    font-size: 2rem;
+    margin-bottom: 24px;
+}
+
+.info-left-desc > p {
+    max-width: 70%;
+    margin-bottom: 24px;
+}
+
+.info-left-desc > a {
+    font-size: 1rem;
+}
+
+@media screen and (max-width: 750px) {
+    .info-left {
+        order: 1;
+    }
+
+    .info-left-desc {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        order: 2;
+    }
+
+    .info-left-desc > h3 {
+        font-size: 1.5rem;
+        text-align: center;
+        margin-bottom: 12px;
+    }
+
+    .info-left-desc > p {
+        margin-bottom: 24px;
+        text-align: center;
+    }
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 24px;
+    flex-wrap: wrap;
+    margin-top: 48px;
+}
+
+footer > div {
+    width: 40%;
+}
+
+.footer-nav {
+    display: flex;
+    justify-content: space-around;
+    flex-grow: 1;
+}
+
+.footer-nav > ul > li {
     padding: 8px;
-    background-color: rgba(27, 101, 197, 0.507);
+}
+
+.nav-link-title {
+    font-weight: 600;
+    margin-bottom: 8px;
+}
+
+@media screen and (max-width: 750px) {
+    footer {
+        flex-direction: column;
+        gap: 24px;
+    }
+
+    footer > div {
+        text-align: center;
+        width: 100%;
+    }
+
+    .footer-nav {
+        width: 50%;
+        flex-grow: 0;
+        align-items: center;
+        justify-content: center;
+        gap: 24px;
+    }
 }
